Fix home page hero on mobile

--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -2,7 +2,10 @@
 @use '../../partials/mixins' as *;
 
 .home {
-  padding-top: 3rem;
+  padding-top: 4rem;
+  @include tablet {
+    padding-top: 3rem;
+  }
 
   &__hero {
     width: 100vw;
